--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "1.0.0",
   "scripts": {
     "dev": "next",
+    "prebuild": "test \"$CI\" = true && npx pnpm install -r --store=node_modules/.pnpm-store || echo skipping pnpm install",
     "build": "next build",
-    "postbuild": "next-on-netlify",
     "start": "next start",
     "type-check": "tsc",
     "lint": "eslint . --ext .ts,.tsx",
@@ -16,6 +16,7 @@
     "verify:fix": "yarn prettier:fix && yarn lint:fix"
   },
   "dependencies": {
+    "@netlify/plugin-nextjs": "^3.1.0",
     "autoprefixer": "^10.2.4",
     "next": "latest",
     "postcss": "^8.2.4",
@@ -47,7 +48,6 @@
     "eslint-plugin-simple-import-sort": "^7.0.0",
     "eslint-plugin-standard": "^5.0.0",
     "husky": "^4.3.8",
-    "next-on-netlify": "^2.8.6",
     "prettier": "^2.2.1",
     "prettier-config-standard": "^1.0.1",
     "typescript": "4.0"
